--- a/_posts/2023-05-09-hi.md
+++ b/_posts/2023-05-09-hi.md
@@ -28,7 +28,7 @@ We are currently in the alpha stage of development. We have a working prototype 
 
 ## However, we can always do with some help.
  
-As you understand, working on an app is a big project, and no, we are not only talking about the coding part of it. As you see, we are currently a small team of people, and we also need people to work with us in a lot of things. If you are interested in joining us, please fill out this form: [](). We are looking for people who are interested in helping us out. Currently we do not have a job distribution in mind, and depending on the number of people who sign up and our requirements, we can distribute the work. If you are interested, please fill out the form, and we will get back to you. 
+As you understand, working on an app is a big project, and no, we are not only talking about the coding part of it. As you see, we are currently a small team of people, and we also need people to work with us in a lot of things. If you are interested in joining us, please fill out this form [here](https://forms.gle/ACnYDNXeiezsLymK7). We are looking for people who are interested in helping us out. Currently we do not have a job distribution in mind, and depending on the number of people who sign up and our requirements, we can distribute the work. If you are interested, please fill out the form, and we will get back to you. 
 
 Note: Although we don't really have any qualifications/prerequisites necessary to work on this, we would like to mention that we would like you to have some experience in any computer language. 
 
