--- a/_posts/2023-05-09-hi.md
+++ b/_posts/2023-05-09-hi.md
@@ -4,8 +4,8 @@ layout: post
 title: Welcome to the dev-blog of Insight!
 
 description: For students, by students
-image: ./assets/img/banner.png
-optimized_image: ./assets/img/banner.png
+image: /assets/img/banner.png
+optimized_image: /assets/img/banner.png
 category: blog
 tags:
   - devs
@@ -13,7 +13,7 @@ tags:
 
 ---
 Hi! Welcome to the 1st post of the dev blog of Insight--the official app for all things IISER Mohali, for the students by the students. This development blog will be a place where we will share our experiences and our journey as we build Insight into the app of our dreams.  
-<!--more-->
+
 ## What is Insight?
 
 Insight is an app that aims to be the one-stop solution for all things IISER Mohali. It will be a platform for students to find all the information they need about the institute and the events and for students to find all the resources they need to make their lives easier. We intend to cover all student-services like the SRMC services, the bus schedule, the academic calendar, the course structure, the hostel complaints register and lots of other things! Also, we are planning special support for Insomnia and IICM contingents!
