--- a/_posts/2023-08-08-snips.md
+++ b/_posts/2023-08-08-snips.md
@@ -18,31 +18,33 @@ Here we are providing some sneak-peaks into our app, because we all love sneak-p
 
 ### Homepage
 
-![homepage](../assets/img/homepage.png)
+<img src="../assets/img/homepage.png" width="25%"/>
+
 
 Welcome!
 
 ### GMail Notifications
 
-![notifications](../assets/img/notif.png)
+<img src="../assets/img/notif.png" width="25%"/>
 
 Admit it, amongst all the spam present in the email, we need to separate out the important ones into one page
 
 ### Contacts Page
 
-![contacts](../assets/img/contacts.png)
+<img src="../assets/img/contacts.png" width="25%"/>
+
 
 We need to save a few necessary numbers, don't we?
 
 ### Calendar
 
-![calendar](../assets/img/calendar.png)
+<img src="../assets/img/calendar.png" width="25%"/>
 
 For remembering and getting notified about all the events happening in campus!
 
 ### Lost and Found
 
-![lostnfound](../assets/img/lostnfound.png)
+<img src="../assets/img/lostnfound.png" width="25%"/>
 
 We very well know what it is for, right?!
 
