--- a/_posts/2023-08-10-hi.md
+++ b/_posts/2023-08-10-hi.md
@@ -3,7 +3,7 @@ date: 2023-08-10 01:12:50
 layout: post
 title: Welcome to the dev-blog of Insight!
 
-description: For students, by students
+description: For the students, by the students
 image: ./assets/img/banner.png
 optimized_image: ./assets/img/banner.png
 category: blog
@@ -35,8 +35,6 @@ Note: Although we don't really have any qualifications/prerequisites necessary t
 ### Are you ready to join us in one of the biggest projects of this Institute?!
 
 
-This project is still in active development, and we are constantly looking for inputs from you. If you have any queries, you can contact us in the meanwhile at <a href="mailto:turingclub@iisermohali.ac.in">`turingclub@iisermohali.ac.in`</a>, or contact any of the developers/club officials.
-
 **Developers of Insight:**
 
 * *Kshitish Kumar Ratha* (ms22174@iisermohali.ac.in)
@@ -47,3 +45,5 @@ This project is still in active development, and we are constantly looking for i
 * *Aditya Jain* (ms19030@iisermohali.ac.in/+91 95606 08956)
 * *Rajnil Mukherjee* (ms21213@iisermohali.ac.in/+91 8017965462)
 * *Kaushik Gupta* (ms20129@iisermohali.ac.in/+91 7357832248)
+
+This project is still in active development, and we are constantly looking for inputs from you. If you have any queries, you can contact us in the meanwhile at <a href="mailto:turingclub@iisermohali.ac.in">`turingclub@iisermohali.ac.in`</a>, or contact any of the developers/club officials.
