--- a/_posts/2023-08-08-snips.md
+++ b/_posts/2023-08-08-snips.md
@@ -4,8 +4,8 @@ layout: post
 title: A sneak peak!
 
 description: Cuz' everybody likes trailers!
-image: "../assets/img/profile.png"
-optimized_image: "../assets/img/profile.png"
+image: "/assets/img/profile.png"
+optimized_image: "/assets/img/profile.png"
 category: blog
 tags:
   - devs
