--- a/_posts/2023-08-10-hi.md
+++ b/_posts/2023-08-10-hi.md
@@ -51,3 +51,5 @@ Note: Although we don't really have any qualifications/prerequisites necessary t
 * *Kaushik Gupta* (ms20129@iisermohali.ac.in/+91 7357832248)
 
 This project is still in active development, and we are constantly looking for inputs from you. If you have any queries, you can contact us in the meanwhile at <a href="mailto:turingclub@iisermohali.ac.in">`turingclub@iisermohali.ac.in`</a>, or contact any of the developers/club officials.
+
+For any queries/suggestions related to the dev blog or it's contents, kindly contact [Rajnil Mukherjee](mailto:ms21213@iisermohali.ac.in).
