--- a/_posts/2023-08-08-snips.md
+++ b/_posts/2023-08-08-snips.md
@@ -2,10 +2,9 @@
 date: 2023-08-10 05:12:50
 layout: post
 title: A sneak peak!
-
 description: Cuz' everybody likes trailers!
-image: "/assets/img/profile.png"
-optimized_image: "/assets/img/profile.png"
+image: "/assets/img/insight_logo.jpg"
+optimized_image: "/assets/img/insight_logo.jpg"
 category: blog
 tags:
   - devs
