tried fixing post image preview

--- a/_posts/2023-08-19-beta.md
+++ b/_posts/2023-08-19-beta.md
@@ -41,7 +41,7 @@ You can also send us feature/bug-related queries at the email <a href="mailto:in
  
 Also, PS: For the guys who are uncomfortable with downloading APK files, [here](https://www.javatpoint.com/how-to-install-apk-on-android) is a quick tutorial!
 
-We hope you like our app!
+We hope you like our app! We will also sit near the entrance of the LHC on MS23's Registration Day to showcase the app to the people! Do come and visit us!
 
 Thanks and regards,
 
